Refactor BattleLog + fix many bugs